services/kubernetes/ingress-nginx/blue.yml
apiVersion: v1
kind: Service
metadata:
  name: blue
  labels:
    app: blue
spec:
  ports:
    - port: 5678
  selector:
    app: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: blue
          image: hashicorp/http-echo
          args:
            - "-text=<body bgcolor='#add8e6'><h3>Blue Svc</h3> <br>path:/bluesvc</body>"
